corrected z-index between navbar and playbar

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ main{
     position: fixed;
     top: 0;
     left: 250px;
-    z-index: 10000;
+    z-index: 1000;
 }
 #content-box{
     margin-top: 100px;
@@ -76,8 +76,8 @@ main{
     position: fixed;
     bottom: 0;
     left: 0;
+    z-index: 10000;
 }
-
 /* flex utilities */
 .flex{
     display: flex;
